--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -50,6 +50,10 @@
     background-image: url("/icons/no-photo-2.png");
 }
 
+.png-icon.png-icon-photos{
+    background-image: url("/icons/photo.png");
+}
+
 .png-icon.png-icon-for-children {
     background-image: url("/icons/for-kids-1.png");
 }
