--- a/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
+++ b/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
@@ -74,16 +74,9 @@
                 line-height: 50px;
               }
 
-          h2{
-            
-          }
-
           span.date{
-                font-size:30px;
                 float:left;
                 width:100%;
-                &.sibiu { color: #CEFB08;}
-                &.valcea { color: #ff0db9;}
               }
 
           .map-container{
@@ -95,8 +88,9 @@
               width:650px;
               margin-left:calc(50% - 550px);
               padding-left: 30px;
+
               &.has-portable-text p {
-                line-height:40px;
+              //   line-height:40px;
               }
           }
 
