--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -67,39 +67,45 @@
 
     @media (max-width: 768px) {
         height: auto;
-
-      
     }
 
   }
 
-    .category-title{
-        position:relative;
-        display: inline-block;
-        bottom:60px;
-
-        border: 4px solid #000;
+  .category-title{
+        position: absolute;
+        height: 40px;
         padding:0 10px;
-        background-color: #fff;
+        line-height: 40px;
+        bottom: -40px;
+        left: 0;
+        font-size: 28px;
+        transform-origin: top left;
+        transform: rotate(-90deg);
+        width: 400px;
         z-index:2;
-        font-size:30px;
         font-weight: 600;
         text-transform: uppercase;
-        
-     @media (max-width: 768px) {
-      
-        font-size: 14px;
-        right: 10px;
-        bottom: unset;
-        top: 10px;
-        position: absolute;
-        border: 4px solid #cefb08;
-        background: #cefb08;
-      
-     }
-    
-  }
+        color: #000000 !important;
 
+        &.title-right {
+          left: unset;
+          right: 0;
+          transform-origin: top right;
+          transform: rotate(90deg);
+        }
+      
+        @media (max-width: 768px) {
+          position: absolute;
+          font-size: 14px;
+          transform: none !important;
+          width: auto;
+          height: 24px;
+          line-height: 24px;
+          top: 10px;
+          left: 10px !important;
+          right: unset !important;
+        }
+  }
 
   section.mission-section{
       float:left;
@@ -107,35 +113,4 @@
 
   }
 
-}
-
-
-@media (min-width: 768px) {
-  :global(body.v1) {
-    .page-container {
-      position: relative;
-
-      :global{
-        .category-title {
-          position: absolute;
-          height: 40px;
-          line-height: 32px;
-          bottom: -40px;
-          left: 0;
-          font-size: 28px;
-          transform-origin: top left;
-          transform: rotate(-90deg);
-          width: 400px;
-          border: 4px solid #cefb08;
-          background-color: #cefb08;
-
-          &.title-right {
-            left: unset;
-            right: 0;
-            transform-origin: top right;
-            transform: rotate(90deg);
-          }
-      }}
-    }
-  }
 }
