--- a/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
+++ b/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
@@ -125,13 +125,10 @@
                 }
               }
 
-          // span.date{
-          //       font-size:30px;
-          //       float:left;
-          //       width:100%;
-          //       &.sibiu { color: #CEFB08;}
-          //       &.valcea { color: #ff0db9;}
-          //     }
+          span.date{
+                float:left;
+                width:100%;
+              }
 
           &.col-1{
               width:650px;
@@ -140,7 +137,7 @@
               text-align: justify;
 
               &.has-portable-text p {
-                line-height:40px;
+                // line-height:40px;
               }
           }
 
