--- a/app/(pages)/(tours)/[sibiu-valcea]/tur/[slug]/page.module.scss
+++ b/app/(pages)/(tours)/[sibiu-valcea]/tur/[slug]/page.module.scss
@@ -87,8 +87,9 @@
               width:650px;
               margin-left:calc(50% - 550px);
               padding-left: 30px;
+              text-align: justify;
               &.has-portable-text p {
-                // line-height:40px;
+                
               }
           }
 
