fix merge again

--- a/app/styles/components/_swiper-responsive.scss
+++ b/app/styles/components/_swiper-responsive.scss
@@ -17,6 +17,7 @@
         z-index:2;
         font-weight: 600;
         text-transform: uppercase;
+        text-align: center;
         color: #000000 ;
    
         @media (max-width: 768px) {
