--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -9,7 +9,7 @@
 @use '_icons' as *;
 @use '_buttons' as *;
 @use '_mobile-specific' as *;
-
+@use 'components/_swiper-responsive' as *;
 
 html{
   height:100%;
