--- a/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
+++ b/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
@@ -23,15 +23,12 @@
       }
     }
 
-    h6.section-title-similar-projects{
+    section.swiper-section-similar-projects{
+      float:left;
       position:relative;
-      float: left;
-      width:100%;
-      text-align:center;
-      font-size:50px;
-      line-height:100px;
-      margin:0;
-      color: #000;
+      height:400px;
+      
+      width: 100%;
     }
   
     section.info{
