--- a/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
+++ b/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
@@ -1,277 +1,13 @@
 .namespace-container{
-  position:relative;
-  float:left;
-  width:100%;
-  
   
 :global{
-    section.swiper-section{
-      position:relative;
-      
-      height: calc(100vh - 40px);
-      width: 100%;
 
-    }
+       section.swiper-section-similar-projects{ height:400px; width:100%;}
 
-     #signup{
-        display: block;
-        position:absolute;
-        bottom:50px;
-        right:100px;
-        z-index: 9;
-        color:#000000;
-        border-color: #000000 !important;
-        overflow:hidden;
+       @media (max-width: 768px) {
+          section.swiper-section-similar-projects{ height:auto;}
 
-        &:hover{
+       }
 
-          &:after{
-            content:"";
-            position:absolute;
-            top:0;
-            left:0;
-            width:100%;
-            height:100%;
-            background: #000;
-            opacity:0.2;
-
-          }
-          
-        }
-      }
-
-      @media (max-width: 768px) {
-        section.swiper-section{
-          height: 300px;
-          .swiper-pagination {
-            bottom:20px !important;
-            .swiper-pagination-bullet{
-              width: 12px;
-              height: 12px;
-            }
-          }
-        }
-        #signup{
-          position: relative;
-          top:unset;
-          left:unset;
-          bottom:unset;
-          right:unset;
-          margin-top:30px;
-
-        }
-      }
-
-
-
-    section.swiper-section-similar-projects{
-      float:left;
-      position:relative;
-      height:400px;
-      
-      width: 100%;
-    }
-  
-    section.info{
-        
-        width:100%;
-        float:left;
-        overflow:hidden;
-        margin-top:30px;
-        padding:30px 12px;
-
-        &.border-bottom{
-          border-bottom: 1px solid #333;
-        }
-        .col{
-          position:relative;
-          float:left;
-
-          span.label{
-            float:left;
-            width:100%;
-            font-weight: 800;
-            font-size:18px;
-            line-height:30px;
-            text-transform: uppercase;
-          }
-
-          span.info{
-            float:left;
-            width:100%;
-            font-weight: normal;
-            font-size:18px;
-            line-height:30px;
-          }
-
-          h1{
-                font-weight: bold;
-                font-size:40px;
-                line-height: 50px;
-
-                &.subtitle{
-                  font-size:20px;
-                }
-              }
-
-          span.date{
-                float:left;
-                width:100%;
-              }
-
-          &.col-1{
-              width:650px;
-              margin-left:calc(50% - 550px);
-              padding-left: 30px;
-              text-align: justify;
-
-              &.has-portable-text p {
-                // line-height:40px;
-              }
-          }
-
-          &.col-2{
-              width:550px;
-              padding-left: 30px;
-              margin-right:calc(50% - 650px);
-              font-weight: bold;
-              font-size:30px;
-              line-height: 40px;
-
-          }
-        }
-        &#details-and-map-section{
-          display: flex;
-          align-items: stretch;
-          padding:0;
-
-         .map-container{
-            position:relative;
-            width:400px;
-            height:100%;
-
-          .see-map-section{
-            h6{display:none;}
-          }
-
-
-
-            .open-in-google-maps{
-              position:absolute;
-              // border-color:#000 !important;
-              // color:#000;
-              font-size:14px;
-              // width:220px;
-              top: 30px;
-              left: 30px;
-            }
-          }
-        }
-
-      @media (max-width: 1200px) {
-        .col{
-          h1{
-            font-size:30px;
-            line-height:40px;
-          }
-
-          span.date{
-                font-size:24px;
-              }
-
-            &.col-1{
-                width:calc(55% - 30px);
-                margin-left:30px;
-                padding-left:0;
-            }
-
-            &.col-2{
-                width:calc(45% - 30px);
-                margin-right:30px;
-                font-weight: bold;
-                font-size:30px;
-                line-height: 30px;
-
-            }
-
-        }
-
-      }
-
-      @media (max-width: 768px) {
-            margin-top:0px;
-
-        .col{
-          
-          h1{
-            
-            line-height:40px;
-            margin-top:0;
-            margin-bottom:0px;
-
-            &.title{ font-size:30px; }
-
-            &.subtitle{
-              font-size:20px;
-              line-height:30px;
-            }
-          }
-
-          span.date{
-                font-size:24px;
-                margin-top:20px;
-              }
-
-          .map-container{
-            
-            width:100%;
-            height:140px;
-          }
-
-          &.col-1{
-            padding:0 10px;
-            margin-left:0;
-            margin-right:0;
-            width:100%;
-            font-size: 14px;
-
-            &.has-portable-text p{
-              margin: 0;
-
-            }
-          }
-
-          &.col-2{
-            padding:0 10px;
-            margin-left:0;
-            margin-right:0;
-            // margin-top:30px;
-            width:100%;
-
-          }
-
-        }
-
-        &#details-and-map-section{
-          border-bottom:none;
-          flex-direction: column;
-          .col-1{
-            padding:0 30px;
-            padding-top:30px;
-          }
-          .col-2{
-              margin-top: 30px;
-              padding:0;
-          }
-        }
-
-        &#other-info-section{
-          border-top:none;
-        }
-
-
-      }
-    }
-  }
-
+}
 }
