--- a/app/styles/components/_swiper-responsive.scss
+++ b/app/styles/components/_swiper-responsive.scss
@@ -30,6 +30,7 @@
           top: 10px;
           left: 10px !important;
           right: unset !important;
+          word-spacing: 3px;
         }
   }
 
