--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -22,8 +22,6 @@
     font-size: 20px;
   }
 
-  
-
   &.btn-primary{
     border: 2px solid #CEFB08;
     color: #CEFB08;
@@ -74,6 +72,21 @@
         background: #00000033;
       }
 
+  }
+
+  &.btn-hover-overlay{
+      &:hover{
+          &:after{
+            content:"";
+            position:absolute;
+            top:0;
+            left:0;
+            width:100%;
+            height:100%;
+            background: #000;
+            opacity:0.2;
+          }
+        }
   }
 
 }
