--- a/app/components/swiper/swiper-events/swiper-events-mobile.module.scss
+++ b/app/components/swiper/swiper-events/swiper-events-mobile.module.scss
@@ -3,7 +3,7 @@
 :global{
 
 
-  .swiper-title{background-color: #000 !important;}
+  .swiper-title{display:none !important;}
   .col-description{color:#000 !important;}
    
         
