added mediaKit, valcea details

--- a/app/components/components-server/team-section.module.scss
+++ b/app/components/components-server/team-section.module.scss
@@ -29,11 +29,11 @@
                 }
 
 
-              .portrait.placeholder{
-                  width:160px;
-                  height:160px;
-                  margin:20px;
-              }
+              // .portrait.placeholder{
+              //     width:160px;
+              //     height:160px;
+              //     margin:20px;
+              // }
             
 
               .name{
@@ -132,11 +132,11 @@
             position:relative;
             width:100%;
 
-            &.placeholder{
-              width:160px;
-              height:160px;
-              margin:20px;
-            }
+            // &.placeholder{
+            //   width:160px;
+            //   height:160px;
+            //   margin:20px;
+            // }
             
             
           }
@@ -196,10 +196,10 @@
                 height: 247px;
                 margin: 10px;
 
-                .portrait.placeholder{
-                  width: 120px;
-                  height: 120px;
-                }
+                // .portrait.placeholder{
+                //   width: 120px;
+                //   height: 120px;
+                // }
               }
               
             }
@@ -226,10 +226,10 @@
                 .name{font-size:14px;}
                 .role{font-size:11px;}
 
-                .portrait.placeholder{
-                  width: 94px;
-                  height: 94px;
-                }
+                // .portrait.placeholder{
+                //   width: 94px;
+                //   height: 94px;
+                // }
               }
               
             }
@@ -254,10 +254,10 @@
               height: 247px;
               margin: 10px;
 
-              .portrait.placeholder{
-                width: 120px;
-                height: 120px;
-              }
+              // .portrait.placeholder{
+              //   width: 120px;
+              //   height: 120px;
+              // }
             }
             
           }
