--- a/sanity/components/contact-oar-input.module.scss
+++ b/sanity/components/contact-oar-input.module.scss
@@ -4,11 +4,11 @@
     display: block !important;
     overflow: hidden;
     float:left;
-    margin-top:30px;
-    margin-bottom:30px;
-    border: 1px solid var(--card-border-color);
-    background-color: #f6f6f8!important;
-    padding: 1.25rem !important;
+    // margin-top:30px;
+    margin-bottom:30px !important;
+    // border: 1px solid var(--card-border-color);
+    // background-color: #f6f6f8!important;
+    // padding: 1.25rem !important;
 
     :global{
 
