--- a/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
+++ b/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
@@ -2,7 +2,7 @@
 
 :global{
 
-       section.swiper-section-similar-projects{ height:400px; width:100%;}
+       section.swiper-section-similar-projects{ height:400px; width:100%; float:left}
 
        @media (max-width: 768px) {
           section.swiper-section-similar-projects{ height:auto;}
