--- a/app/(pages)/(pages-archive)/2024/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(pages-archive)/2024/(main)/[sibiu-valcea]/page.module.scss
@@ -24,6 +24,37 @@
     }
   }
 
+   .event-title-on-mobile{
+    position:relative;
+    line-height:100px;
+    float:left;
+    width:100%;
+    font-weight: bold;
+    text-align: center;
+    background: #000;
+    text-transform: uppercase;
+    overflow:hidden;
+    font-size:50px;
+
+    @media (max-width: 320x) { font-size:40px;}
+
+    &.event-title-kids-workshop{
+      font-size:60px;
+      @media (max-width: 640px) {font-size:55px;}
+      @media (max-width: 580px) {font-size:50px;}
+      @media (max-width: 520px) {font-size:45px;}
+      @media (max-width: 480px) {font-size:40px;}
+      @media (max-width: 420px) {font-size:35px;}
+      @media (max-width: 360px) {font-size:30px;}
+      @media (max-width: 320px) {font-size:27px;}
+    }
+  }
+
+  .see-map-container{
+    height: 400px;
+    @media (max-width: 768px) {height: 220px;}
+  }
+
 
   section{
     position:relative;
@@ -39,39 +70,9 @@
 
     @media (max-width: 768px) {
         height: auto;
-
-      
     }
 
   }
-
-    .category-title{
-        position:relative;
-        display: inline-block;
-        bottom:60px;
-
-        border: 4px solid #000;
-        padding:0 10px;
-        background-color: #fff;
-        z-index:2;
-        font-size:30px;
-        font-weight: 600;
-        text-transform: uppercase;
-        
-     @media (max-width: 768px) {
-      
-        font-size: 14px;
-        right: 10px;
-        bottom: unset;
-        top: 10px;
-        position: absolute;
-        border: 4px solid #cefb08;
-        background: #cefb08;
-      
-     }
-    
-  }
-
 
   section.mission-section{
       float:left;
@@ -79,35 +80,4 @@
 
   }
 
-}
-
-
-@media (min-width: 768px) {
-  :global(body.v1) {
-    .page-container {
-      position: relative;
-
-      :global{
-        .category-title {
-          position: absolute;
-          height: 40px;
-          line-height: 32px;
-          bottom: -40px;
-          left: 0;
-          font-size: 28px;
-          transform-origin: top left;
-          transform: rotate(-90deg);
-          width: 400px;
-          border: 4px solid #cefb08;
-          background-color: #cefb08;
-
-          &.title-right {
-            left: unset;
-            right: 0;
-            transform-origin: top right;
-            transform: rotate(90deg);
-          }
-      }}
-    }
-  }
 }
