--- a/app/styles/components/_common-page-structure.scss
+++ b/app/styles/components/_common-page-structure.scss
@@ -100,6 +100,7 @@
         .map-container{
           position:relative;
           height: 100%;
+          min-height:240px;
           padding: 20px;
 
           .open-in-google-maps{
@@ -141,6 +142,7 @@
             line-height: 30px;
         }
       }
+      
     }
     
      section#details-and-map-section{ .col-1{width:calc(55% - 50px); margin-left:50px;}}
@@ -181,7 +183,7 @@
 
         span.date{ font-size:24px; margin-top:20px; }
 
-        .map-container{ width:100%; height:140px; }
+        .map-container{ width:100%; height:140px; min-height:unset !important;}
 
         &.col-1{font-size: 14px;}
 
