--- a/app/(pages)/(tours)/[sibiu-valcea]/tur/[slug]/page.module.scss
+++ b/app/(pages)/(tours)/[sibiu-valcea]/tur/[slug]/page.module.scss
@@ -1,167 +1,13 @@
 .namespace-container{
-  position:relative;
-  float:left;
-  width:100%;
-  
   
 :global{
-    section.swiper-section{
-      position:relative;
-      height: calc(100vh - 40px);
-      width: 100%;
 
-      @media (max-width: 768px) {
-        height: 300px;
+       section.swiper-section-similar-projects{ height:400px; width:100%;float:left;}
 
-        .swiper-pagination {
-          bottom:20px !important;
-          .swiper-pagination-bullet{
-            width: 12px;
-            height: 12px;
-          }
-        }
-      }
+       @media (max-width: 768px) {
+          section.swiper-section-similar-projects{ height:auto;}
 
-    }
-  
-    section.info{
-        
-        width:100%;
-        float:left;
-        overflow:hidden;
-        margin-top:30px;
-        padding:30px 12px;
+       }
 
-        &.border-bottom{
-          border-bottom: 1px solid #333;
-        }
-        .col{
-          
-          float:left;
-
-          span.label{
-            float:left;
-            width:100%;
-            font-weight: 800;
-            font-size:18px;
-            line-height:30px;
-            text-transform: uppercase;
-          }
-
-          span.info{
-            float:left;
-            width:100%;
-            font-weight: normal;
-            font-size:18px;
-            line-height:30px;
-          }
-
-          h1{
-                font-weight: bold;
-                font-size:40px;
-                line-height: 50px;
-              }
-
-          span.date{
-                float:left;
-                width:100%;
-              }
-
-          .map-container{
-            width:400px;
-            height:400px;
-          }
-
-          &.col-1{
-              width:650px;
-              margin-left:calc(50% - 550px);
-              padding-left: 30px;
-              text-align: justify;
-              &.has-portable-text p {
-                
-              }
-          }
-
-          &.col-2{
-              width:550px;
-              padding-left: 30px;
-              margin-right:calc(50% - 650px);
-              font-weight: bold;
-              font-size:30px;
-              line-height: 40px;
-
-          }
-        }
-    
-
-      @media (max-width: 1200px) {
-        .col{
-          h1{
-            font-size:30px;
-            line-height:40px;
-          }
-
-          span.date{
-                font-size:24px;
-              }
-
-            &.col-1{
-                width:calc(55% - 30px);
-                margin-left:30px;
-                padding-left:0;
-            }
-
-            &.col-2{
-                width:calc(45% - 30px);
-                margin-right:30px;
-                font-weight: bold;
-                font-size:30px;
-                line-height: 30px;
-
-            }
-
-        }
-
-      }
-
-      @media (max-width: 768px) {
-        .col{
-          
-          h1{
-            font-size:30px;
-            line-height:40px;
-            margin-bottom:20px;
-          }
-
-          span.date{
-                font-size:24px;
-              }
-
-          .map-container{
-            width:100%;
-            height:400px;
-          }
-
-          &.col-1{
-            padding:0 10px;
-            margin-left:0;
-            margin-right:0;
-            width:100%;
-          }
-
-          &.col-2{
-            padding:0 10px;
-            margin-left:0;
-            margin-right:0;
-            margin-top:30px;
-            width:100%;
-
-          }
-
-        }
-
-      }
-    }
-  }
-
+}
 }
