--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -80,6 +80,10 @@
   text-transform: uppercase;
 }
 
+.text-underline{
+  text-decoration: underline;
+}
+
 .font-size-30{
   font-size: 30px !important;
 }
