--- a/app/components/components-server/team-section.module.scss
+++ b/app/components/components-server/team-section.module.scss
@@ -18,6 +18,7 @@
               height:300px;
               margin:0px 30px;
               float:left;
+              color:#000;
 
               .member-image{
                   border-radius:50%;
@@ -27,14 +28,6 @@
                   overflow: hidden;
                   border-radius: 50%;
                 }
-
-
-              // .portrait.placeholder{
-              //     width:160px;
-              //     height:160px;
-              //     margin:20px;
-              // }
-            
 
               .name{
                 float:left;
@@ -118,6 +111,7 @@
             height:300px;
             margin:0px 30px;
             float:left;
+            color:#000;
 
           .member-image{
             border-radius:50%;
@@ -131,13 +125,6 @@
             float:left;
             position:relative;
             width:100%;
-
-            // &.placeholder{
-            //   width:160px;
-            //   height:160px;
-            //   margin:20px;
-            // }
-            
             
           }
 
@@ -195,11 +182,6 @@
                 width: 165px;
                 height: 247px;
                 margin: 10px;
-
-                // .portrait.placeholder{
-                //   width: 120px;
-                //   height: 120px;
-                // }
               }
               
             }
@@ -225,11 +207,6 @@
                 margin: 10px;
                 .name{font-size:14px;}
                 .role{font-size:11px;}
-
-                // .portrait.placeholder{
-                //   width: 94px;
-                //   height: 94px;
-                // }
               }
               
             }
@@ -253,11 +230,6 @@
               width: 165px;
               height: 247px;
               margin: 10px;
-
-              // .portrait.placeholder{
-              //   width: 120px;
-              //   height: 120px;
-              // }
             }
             
           }
