--- a/app/components/components-server/tour-section.module.scss
+++ b/app/components/components-server/tour-section.module.scss
@@ -101,38 +101,60 @@
                   width:100%;
 
                   &.col-image{
-                    height:300px;
-                  }
-
-                  &.col-description{
-                    position: absolute;
-                    background-color:#cefb08;
-                    height:100%;
-                    width:auto;
-                    padding:10px 0;
-                    background-color: #ffffffbd;
-                    border-right: 1px solid #000000;
-                    border-right: 10px solid #ffffff;
-
-                      h6{
-                        text-align: center;
-                        font-size: 24px;
-                        margin-top:60px;
-                        width:120px;
-                        text-align:center;
-                        text-transform: uppercase;
-                      }
-
-                     a.btn{
-                      position:absolute;
-                      bottom:90px;
-                      width: 120px;
-                      font-size: 13px;
-                      border-color: #000 !important;
-                      margin-left: calc(50% - 70px);
-
+                    height:220px;
+                    .tour-title-on-mobile{
+                      position: absolute;
+                      font-size: 18px;
+                      color:#000;
+                      transform: none !important;
+                      width: auto;
+                      height: 24px;
+                      padding: 0 10px;
+                      line-height: 24px;
+                      top: 10px;
+                      left: 10px !important;
+                      right: unset !important;
+                      word-spacing: 3px;
                     }
+                    .btn{
+                      position:absolute;
+                      bottom:20px;
+                      margin-left: calc(50% - 70px);
+                      font-size:13px;
+                      color:#000 !important;
+                    }
+
                   }
+
+                  // &.col-description{
+                  //   position: absolute;
+                  //   background-color:#cefb08;
+                  //   height:100%;
+                  //   width:auto;
+                  //   padding:10px 0;
+                  //   background-color: #ffffffbd;
+                  //   border-right: 1px solid #000000;
+                  //   border-right: 10px solid #ffffff;
+
+                  //     h6{
+                  //       text-align: center;
+                  //       font-size: 24px;
+                  //       margin-top:60px;
+                  //       width:120px;
+                  //       text-align:center;
+                  //       text-transform: uppercase;
+                  //     }
+
+                  //    a.btn{
+                  //     position:absolute;
+                  //     bottom:90px;
+                  //     width: 120px;
+                  //     font-size: 13px;
+                  //     border-color: #000 !important;
+                  //     margin-left: calc(50% - 70px);
+
+                  //   }
+                  // }
               }
 
 
@@ -143,24 +165,24 @@
               }
             }
 
-            &.just-one-tour{
-              padding:0;
-               .tour{
+            // &.just-one-tour{
+            //   padding:0;
+            //    .tour{
 
-                .col-description{
-                  width:100%;
-                  height:30px;
-                  background:transparent;
-                  bottom:10px;
-                  border:none;
+            //     .col-description{
+            //       width:100%;
+            //       height:30px;
+            //       background:transparent;
+            //       bottom:10px;
+            //       border:none;
                   
-                  h6{ display:none; }
-                  a.btn{bottom:0; font-size:16px; width:140px;}
+            //       h6{ display:none; }
+            //       a.btn{bottom:0; font-size:16px; width:140px;}
 
-                }
+            //     }
 
-              }
-            }
+            //   }
+            // }
 
           }
 
