--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -32,6 +32,7 @@
 
     &.btn-invert{
         background-color:#CEFB08 ;
+        border-color:#000;
         color: #000 ;
         &:hover{
           color: #CEFB08;
