--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -76,6 +76,10 @@
     width: 100%;
     margin-top:10px;
 
+    &#tours-section{
+      height:auto;
+    }
+
     @media (max-width: 1200px) {
         width: 200%;
     }
