--- a/app/styles/components/_common-page-structure.scss
+++ b/app/styles/components/_common-page-structure.scss
@@ -75,6 +75,7 @@
 
         &.col-1{
             width:650px;
+            min-height: 1px;
             margin-left:calc(50% - 550px);
             padding-left: 30px;
             text-align: justify;
@@ -98,6 +99,7 @@
         display: flex;
         align-items: stretch;
         padding:0;
+        padding-bottom: 50px;
 
         .map-container{
           position:relative;
