--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -64,6 +64,7 @@
   }
 
 
+
   section{
     position:relative;
   }
@@ -76,9 +77,7 @@
     width: 100%;
     margin-top:10px;
 
-    &#tours-section{
-      height:auto;
-    }
+  &#tours-section{ height:auto; }
 
     @media (max-width: 1200px) {
         width: 200%;
@@ -94,6 +93,12 @@
   section.mission-section{
       float:left;
     }
+
+   @media (max-width: 768px) {
+      #tours-section{
+        margin-bottom:10px;
+      }
+  }
 
   }
 
