--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -79,9 +79,9 @@
 
   &#tours-section{ height:auto; }
 
-    @media (max-width: 1200px) {
-        width: 200%;
-    }
+    // @media (max-width: 1200px) {
+    //     width: 200%;
+    // }
 
     @media (max-width: 768px) {
         height: auto;
