--- a/app/components/components-server/footer-section.module.scss
+++ b/app/components/components-server/footer-section.module.scss
@@ -36,6 +36,10 @@
           float:left;
           line-height: 20px;
           font-size: 14px;
+          div{
+            color:#fff;
+            text-decoration: none;
+          }
           
         }
 
@@ -59,6 +63,12 @@
             &.col-2{ width:50%;}
             &.col-3{ width:50%;}
           }
+      }
+
+      @media (max-width: 400px) {
+        .col {
+          padding-left: 30px;
+        }
       }
 
     }
