--- a/app/components/components-ui/expand-section.module.scss
+++ b/app/components/components-ui/expand-section.module.scss
@@ -10,16 +10,13 @@
       cursor:pointer;
       padding:30px;
       border-bottom:1px solid #000;
-      &:hover{
-          // background:#000;
-          // color:#fff;
-        }
 
       h3.question{
         width:100%;
         position:relative;
         line-height: 30px;
         padding:10px;
+        padding-right: 30px;
         max-width:900px;
         margin: 0 auto;
 
@@ -57,6 +54,9 @@
           display:block;
         }
       }
+
+      @media (max-width: 600px) {  padding:20px; h3.question{font-size:15px; line-height:20px}}
+      @media (max-width: 400px) {  .faq-item h3.question{font-size:13px;} }
 
   }
 
